fix: #10158, fix extra padding

--- a/public/less/admin/header.less
+++ b/public/less/admin/header.less
@@ -92,7 +92,7 @@
 		}
 	}
 
-	#main-menu li {
+	#main-menu > li {
 		padding-bottom: 10px;
 	}
 
